# cython_lesson

./: .gitignore  README.md  requirements.txt
1_loop_comparison/: loop_cpython.c  loop_cpython.pyx  loop_cpython_setup.py  loop_cpython_wrapper.py  loop_python.py
2_pandas_integration/: cython_pandas.c  cython_pandas.pyx  cython_pandas_wrapper.py  python_pandas.py  setup.py
3_import_c++/: Rectangle.cpp  Rectangle.h  rectangle_cpy.cpp  rectangle_cpy.pyx  run_example.py  setup.py
3_spacy_nlp/: spacy_cython.cpp  spacy_cython.pyx  spacy_cython_setup.py  spacy_cython_wrapper.py  spacy_python.py
4_import_llama/: README.md  llama_c.c  llama_c.h  llama_cpp.cpp  llama_cy.c  llama_cy.pyx  run  run.c  run_llama.py  setup.py  win.c
5_call_python_from_c++/: CMakeLists.txt  calc.py  example  main.cpp
sandbox/: cython_glue.c  cython_glue.pyx  cython_glue_setup.py  cython_glue_wrapper.py  huggingface_glue.sh  profile.prof  profile.txt  python_glue.py
sandbox/spacy_nlp/: spacy_python.py
